--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,15 +15,15 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <!-- Bootstrap -->
+    <link href="%PUBLIC_URL%/assets/css/bootstrap.css" rel="stylesheet">
+    <link href="%PUBLIC_URL%/assets/css/custom.css" rel="stylesheet">
+    <link href="%PUBLIC_URL%/assets/css/carousel.css" rel="stylesheet">
+    <link href="%PUBLIC_URL%/assets/ionicons-2.0.1/css/ionicons.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+    <link href='https://fonts.googleapis.com/css?family=Catamaran:400,100,300' rel='stylesheet' type='text/css'>
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <link href="%PUBLIC_URL%/assets/css/custom-scroll/jquery.mCustomScrollbar.css" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
@@ -39,5 +39,19 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <!-------------------------------------------------------->
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="%PUBLIC_URL%/assets/js/jquery-latest.min.js"></script>
+    
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="%PUBLIC_URL%/assets/js/bootstrap.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/store.js"></script>
+
+    <script type="text/javascript" src="%PUBLIC_URL%/assets/js/custom-scroll/jquery.mCustomScrollbar.concat.min.js"></script>
+    
+    <script type="text/javascript" src="%PUBLIC_URL%/assets/js/jquery-ui-1.11.4.js"></script>
+    <script type="text/javascript" src="%PUBLIC_URL%/assets/js/jquery.ui.touch-punch.js"></script>
   </body>
 </html>
