--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -19,6 +19,7 @@
     <link href="%PUBLIC_URL%/assets/css/bootstrap.css" rel="stylesheet">
     <link href="%PUBLIC_URL%/assets/css/custom.css" rel="stylesheet">
     <link href="%PUBLIC_URL%/assets/css/carousel.css" rel="stylesheet">
+    <link href="%PUBLIC_URL%/assets/css/carousel-product.css" rel="stylesheet">
     <link href="%PUBLIC_URL%/assets/ionicons-2.0.1/css/ionicons.css" rel="stylesheet">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
     <link href='https://fonts.googleapis.com/css?family=Catamaran:400,100,300' rel='stylesheet' type='text/css'>
